@@ -1,4 +1,4 @@
-.\" $Id: tmux.1,v 1.32 2008-06-11 06:19:56 nicm Exp $
+.\" $Id: tmux.1,v 1.33 2008-06-15 08:01:54 nicm Exp $
 .\"
 .\" Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
 .\"
@@ -136,7 +136,7 @@ to exit from it.
 .Sh KEY BINDINGS
 .Nm
 may be controlled from an attached client by using a key combination of a
-prefix,
+prefix key,
 .Ql ^B
 (ctrl-B) by default, followed by a command key.
 .Pp
@@ -505,7 +505,7 @@ The default is
 Set the maximum number of lines held in window history.
 This setting applies only to new windows - existing window histories are not
 resized and retain the limit at the point they were created.
-.It Ic prefix Ar key
+.It Ic prefix-key Ar key
 Set the current prefix key.
 .It Xo Ic status
 .Op Ic on | Ic off
